# WCH-Next

./: Cargo.toml  README.md  build.rs
src/: main.rs  platform.rs
ui/: app.slint
