[package]
name = "WCH-Next"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embed-resource = "3.0.11"
slint = "1.16.1"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
] }

[build-dependencies]
slint-build = "1.16.1"
embed-resource = "3.0.11"

[profile.release]
codegen-units = 1
lto = true
